--- a/Umbraco.Demo.Task/Views/Partials/Master/footer.cshtml
+++ b/Umbraco.Demo.Task/Views/Partials/Master/footer.cshtml
@@ -121,7 +121,7 @@
                             <a href="#" title="רפאל - בתי חולים" class="logo"></a>
         
                             <div class="copyright clear">
-                                <div>@DateTime.UtcNow.Year הזכויות שמורות לרפאל © </div>
+                                <div>  הזכויות שמורות לרפאל © @DateTime.UtcNow.Year  </div>
                                 <div class="d-ltr">Website by: <a href="https://www.tvuna.co.il" aria-label="Tvuna" class="logo_tvuna"></a></div>
                             </div>
         
