--- a/Umbraco.Demo.Task/Views/HeaderProperties.cshtml
+++ b/Umbraco.Demo.Task/Views/HeaderProperties.cshtml
@@ -1,5 +1,4 @@
-﻿@* @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.HeaderProperties> *@
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
 	Layout = null;
 }
